# scrap_accounts

./: .gitignore
instagram/: README.md  main.py  pyproject.toml  scraped_instagram_urls.txt
instagram/src/scrap_insta/: __init__.py  browser.py  cli.py  config.py  config.toml  constants.py  downloader.py  files.py  gallery.py  models.py  reports.py  urls.py
instagram/tests/: test_browser.py  test_cli.py  test_downloader.py  test_files_reports.py  test_urls.py
