[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scrap-insta"
version = "0.1.0"
description = "Personal Instagram visible-link backup CLI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44",
    "yt-dlp>=2024.4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.scripts]
scrap-insta = "scrap_insta.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
scrap_insta = ["config.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
